Fixed Spacing in logo img/Put link on home v1.1

--- a/my-portfolio/src/styles/TopNav.scss
+++ b/my-portfolio/src/styles/TopNav.scss
@@ -51,11 +51,15 @@
 }
 
 section {
+
+    display: flex !important;
+    flex-direction: column;
+    align-items: center;
    
     @include lg {
-        display: flex !important;
         justify-content: center;
         margin-top: 70px;
+        flex-direction: row;
     }
 
     img {
@@ -64,6 +68,10 @@ section {
         margin-left: 0px !important;
         margin-right: 0px !important;
         }
+    }
+
+    .name-title-social {
+        margin-top: 25px;
     }
 }
 
